--- a/package.json
+++ b/package.json
@@ -3,9 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@nivo/bar": "^0.78.0",
+    "@nivo/core": "^0.78.0",
+    "@nivo/line": "^0.78.0",
+    "@nivo/scatterplot": "^0.78.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "ajv": "^8.8.2",
+    "core-js": "^3.20.2",
+    "d3": "^7.2.1",
+    "nivo": "^0.31.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
